Offline login for walnut app

--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -39,6 +39,7 @@
             </div>
           </div>
           </div>
+          <!--
 		  <div class="row">
           <div class="control-group  col-md-10">
             <div class="checkbox checkbox check-success"> <a href="#">Trouble login in?</a>&nbsp;&nbsp;
@@ -46,7 +47,15 @@
               <label for="checkbox1">Keep me reminded </label>
             </div>
           </div>
+          </div> -->
+          <div class="row">
+          <div class="control-group  col-md-10">
+            <div class="checkbox checkbox check-success">&nbsp;&nbsp;
+              <input type="checkbox" id="checkbox2" value="1">
+              <label for="checkbox2">Offline login</label>
+            </div>
           </div>
+          </div> 
           <div class="row">
             <div class="col-md-10">
               <button id="login-submit" class="btn btn-primary btn-cons pull-right" type="submit">Login </button>
