list of modules html created, takeaclass html changes

--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -777,6 +777,9 @@ h3.time {
 #textbooks.list.takeClass .meta.name {
   width: 50%;
 }
+#textbooks.list.takeClass .meta.rec {
+  width: 30%;
+}
 #textbooks.list.takeClass .txtbook {
   cursor: pointer;
   z-index: 2;
