--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -79,9 +79,6 @@
   margin: 0.5em;
   border: 1px solid transparent;
 }
-.creator .row:last-child {
-  margin: 0;
-}
 #site-page-content-region {
   margin-left: 240px;
   margin-right: 240px;
@@ -146,12 +143,12 @@
   font-size: 25px;
 }
 #toolbox .qstns ul li {
-  width: 102px;
+  width: 96px;
   height: 40px;
   font-weight: bold;
 }
 #toolbox .qstns ul li i {
-  font-size: 16px;
+  font-size: 17px;
 }
 .dock {
   position: absolute;
@@ -163,6 +160,7 @@
 .dock .builder_actions {
   background: #e5e9ec;
   padding-bottom: 15px;
+  margin-top: -48px;
 }
 .dock .btn-cons2 {
   width: 108px;
@@ -663,6 +661,40 @@
   font-size: 50px;
   color: #e5e9ec;
 }
+/*MCQ*/
+.mcq-option {
+  width: 145px;
+  margin-right: 10px;
+  float: left;
+  word-wrap: break-word;
+  border: 2px dashed #f3f3f3;
+  padding: 5px;
+  margin-bottom: 5px;
+}
+.mcq-option span {
+  float: left;
+}
+.mcq-option .mcq-option-select {
+  float: left;
+  position: relative;
+  z-index: 2;
+  margin: 4px 5px 0;
+}
+.mcq-option p {
+  margin: 0;
+}
+.mcq-option p.placeholder {
+  color: #dfe4e8;
+  font-size: 15px;
+  font-weight: bold;
+}
+#multiple-answer label {
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+#individual-marks-region input {
+  margin-bottom: 4px;
+}
 .listBox {
   margin-top: 60px;
 }
@@ -744,6 +776,9 @@ h3.time {
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
   width: 50%;
+}
+#textbooks.list.takeClass .meta.rec {
+  width: 30%;
 }
 #textbooks.list.takeClass .txtbook {
   cursor: pointer;
