--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -785,6 +785,10 @@ h3.time {
   z-index: 2;
   position: relative;
 }
+/*Modules Table*/
+.moduleList .btn.action {
+  width: 88px;
+}
 body {
   background-color: #e5e9ec;
 }
