--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
@@ -12,7 +12,7 @@
 			<span class="sort anim150 desc" data-sort="data-subjects" data-order="asc"></span>
 		</div>
 
-		<div class="meta rec">Modules
+		<div class="meta rec">Modules Completed
 			<span class="sort anim150 asc" data-sort="data-modules" data-order="desc"></span> 
 			<span class="sort anim150 desc" data-sort="data-modules" data-order="asc"></span>
 		</div>
