--- a/wp-content/themes/walnut/style.css
+++ b/wp-content/themes/walnut/style.css
@@ -2,6 +2,9 @@
 Theme Name: walnut
 Description: Walnut Main Theme ()
 Version: 1.0.0 
+Author: ajency.in 
+Author URI: https://ajency.in 
+License: GNU General Public License
 */
 
 .progress .bar {
