--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/start-training/templates/class-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/start-training/templates/class-description.html
@@ -1,6 +1,6 @@
 <div class="tiles white grid simple vertical green">
 	<div class="grid-title no-border">
-		<h4 class="">Class <span class="semi-bold">{{showClassID}}</span></h4>
+		<h4 class=""><span class="semi-bold">{{showClassID}}</span></h4>
 		<div class="tools">
 			<a href="javascript:;" class="collapse"></a>
 		</div>
