--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -773,6 +773,30 @@ h3.time {
   -webkit-border-radius: 100px 100px 100px 100px;
   -moz-border-radius: 100px 100px 100px 100px;
 }
+@media (min-width: 768px) {
+  .students .col-md-2,
+  .students .col-sm-2,
+  .students .col-lg-2 {
+    width: 20%;
+    *width: 20%;
+  }
+}
+@media (min-width: 1200px) {
+  .students .col-md-2,
+  .students .col-sm-2,
+  .students .col-lg-2 {
+    width: 20%;
+    *width: 20%;
+  }
+}
+@media (min-width: 768px) and (max-width: 979px) {
+  .students .col-md-2,
+  .students .col-sm-2,
+  .students .col-lg-2 {
+    width: 20%;
+    *width: 20%;
+  }
+}
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
   width: 50%;
