--- a/HTML/assets/less/training.less
+++ b/HTML/assets/less/training.less
@@ -88,3 +88,22 @@ h3.time{
 	
 
 }
+
+@media (min-width: 768px){
+    .students .col-md-2, .students .col-sm-2, .students .col-lg-2  {
+        width: 20%;
+        *width: 20%;
+    }
+}
+@media (min-width: 1200px) {
+    .students .col-md-2, .students .col-sm-2, .students .col-lg-2 {
+        width: 20%;
+        *width: 20%;
+    }
+}
+@media (min-width: 768px) and (max-width: 979px) {
+    .students .col-md-2, .students .col-sm-2, .students .col-lg-2 {
+        width: 20%;
+        *width: 20%;
+    }
+}
