--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/class-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/class-description.html
@@ -10,7 +10,7 @@
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
 					<label class="form-label">Number of Students</label>
-					18
+					{{students_count}}
 				</div>
 			</div>
 			<div class="col-md-4">
