--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -5,6 +5,7 @@
 @import "chapters.less";
 @import "class.less";
 @import "training.less";
+@import "module.less";
 @import "teacher.less";
 
 body{
@@ -170,53 +171,6 @@ tbody.rowlink{
 @media(max-width:767px){
 	.login-container{
 		margin-top: 20px !important; /*For mobile app testing*/
-	}
-}
-
-#myCanvas-miki{
-
-	.cbp_tmlabel{
-		cursor: pointer;
-		a{
-			color: @color-primary;
-		}
-		.tools{
-			display: inline-block;
-			padding: 0;
-			margin: 0;
-			position: relative;
-			float: right;
-			&> a{
-				position: relative;
-				display: inline-block;
-				margin-left: 5px;
-				font-size: 16px;
-				width: 15px;
-				height: 15px;
-				color: darken(@body-bg, 20%);
-				&.remove{
-					&:before{
-						content: "\f00d";
-						font-family: FontAwesome;
-					}
-				}
-				&.config{
-					&:before{
-						content: "\f013";
-						font-family: FontAwesome;
-					}
-				}
-			}
-		} 
-	}
-
-	.cbp_tmtimeline > li{
-		.contentPiece, .cbp_tmlabel{
-			cursor: move;
-			.cbp_tmicon{
-				top:auto;
-			}
-		}
 	}
 }
 
