content module duration

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
@@ -20,8 +20,8 @@
 							</div>
 							<div class="col-md-4">
 							    <div class="margin-bottom-20 ">
-									<label class="form-label">Subject</label>
-									Science
+									<label class="form-label">Textbook</label>
+									{{showTextbook}}
 								</div>
 							</div>												 
 						</div>
@@ -41,8 +41,16 @@
 							<div class="col-md-4">
 							    <div class="margin-bottom-20 ">
 									<label class="form-label">Chapter</label>
-									Lorem Ipsum is simply dummy
+									{{showChapter}}
 								</div>
 							</div>											 
+						</div>
+						<div class="row ">
+								<div class="col-md-4">
+								   <div class="margin-bottom-20 ">
+									<label class="form-label">Duration</label>
+									{{duration}} {{minshours}}
+								</div>
+							</div>										 
 						</div>
 					</div>
