--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -39,7 +39,7 @@
             </div>
           </div>
           </div>
-          <!--
+          
 		  <div class="row">
           <div class="control-group  col-md-10">
             <div class="checkbox checkbox check-success"> <a href="#">Trouble login in?</a>&nbsp;&nbsp;
@@ -47,7 +47,7 @@
               <label for="checkbox1">Keep me reminded </label>
             </div>
           </div>
-          </div> -->
+          </div> 
           <div class="row">
           <div class="control-group  col-md-10">
             <div class="checkbox checkbox check-success">&nbsp;&nbsp;
