--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
@@ -3,7 +3,7 @@
       {{&thumbnail}}
     </div>
     <div class="titles">
-      <h2><a class="textbook_titles" data-id="{{term_id}}" href="#textbook/{{term_id}}">{{name}}</a></h2>
+      <h2><a class="textbook_titles" data-id="{{term_id}}" href="#teachers/content-modules/textbook/{{term_id}}">{{name}}</a></h2>
       <p><em>{{author}}</em></p>
     </div>
 </div>
