custom checkbox styles

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -2,6 +2,7 @@
 @import "variables.less";
 @import "mixins.less";
 @import "builder.less";
+@import "checkbox.less";
 @import "chapters.less";
 @import "class.less";
 @import "training.less";
@@ -22,8 +23,7 @@ body{
 }
 
 .header{
-	.quick-section2{
-		
+	.quick-section2{		
 		margin-top: 16px;
 		margin-right: 10px;
 		display: inline-block;
