--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -695,6 +695,43 @@
 #individual-marks-region input {
   margin-bottom: 4px;
 }
+/*input[type=checkbox].mcq-option-select {
+	display:none;
+}
+
+input[type=checkbox].mcq-option-select + p.mcq-option-text {
+	padding-left:55px;
+	height:41px; 
+	display:inline-block;
+	//line-height:41px;
+	background-repeat:no-repeat;
+	background-position: 0 0;
+	//font-size:41px;
+	vertical-align:middle;
+	cursor:pointer;
+}
+
+input[type=checkbox].mcq-option-select:checked + p.mcq-option-text {
+	background-position: 0 -41px;
+}
+
+p.mcq-option-text {
+	background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_37dcefa588101cc5918ea69e918d56b9.png);
+	-webkit-touch-callout: none;
+	  -webkit-user-select: none;
+	   -khtml-user-select: none;
+	     -moz-user-select: none;
+	      -ms-user-select: none;
+	          user-select: none;
+}*/
+.checkbox {
+  width: 50px;
+  height: 41px;
+  padding: 0 5px 0 0;
+  background: url(../../../images/csscheckbox.png) no-repeat;
+  display: block;
+  float: left;
+}
 .listBox {
   margin-top: 60px;
 }
@@ -796,6 +833,59 @@ h3.time {
     width: 20%;
     *width: 20%;
   }
+}
+#myCanvas-miki .cbp_tmlabel {
+  cursor: pointer;
+}
+#myCanvas-miki .cbp_tmlabel a {
+  color: #0aa699;
+}
+#myCanvas-miki .cbp_tmlabel .tools {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  float: right;
+}
+#myCanvas-miki .cbp_tmlabel .tools > a {
+  position: relative;
+  display: inline-block;
+  margin-left: 5px;
+  font-size: 16px;
+  width: 15px;
+  height: 15px;
+  color: #aab7c1;
+}
+#myCanvas-miki .cbp_tmlabel .tools > a.remove:before {
+  content: "\f00d";
+  font-family: FontAwesome;
+}
+#myCanvas-miki .cbp_tmlabel .tools > a.config:before {
+  content: "\f013";
+  font-family: FontAwesome;
+}
+#myCanvas-miki .cbp_tmlabel.done {
+  background-color: #f3f3f3;
+}
+#myCanvas-miki .cbp_tmlabel.done a {
+  color: #0bbeaf;
+}
+#myCanvas-miki .cbp_tmlabel.done .tiles.grey {
+  border-top: 1px solid #ffffff;
+}
+#myCanvas-miki .cbp_tmtimeline > li .contentPiece,
+#myCanvas-miki .cbp_tmtimeline > li .cbp_tmlabel {
+  cursor: move;
+}
+#myCanvas-miki .cbp_tmtimeline > li .contentPiece .cbp_tmicon,
+#myCanvas-miki .cbp_tmtimeline > li .cbp_tmlabel .cbp_tmicon {
+  top: auto;
+}
+#myCanvas-miki .cbp_tmtimeline > li .cbp_tmlabel.view {
+  cursor: default;
+}
+#myCanvas-miki .cbp_tmtimeline > li .cbp_tmlabel.done:after {
+  border-right-color: #f3f3f3;
 }
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
