--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -3,6 +3,7 @@
 @import "mixins.less";
 @import "builder.less";
 @import "checkbox.less";
+@import "fib.less";
 @import "chapters.less";
 @import "class.less";
 @import "training.less";
