--- a/HTML/assets/less/checkbox.less
+++ b/HTML/assets/less/checkbox.less
@@ -28,7 +28,7 @@ p.mcq-option-text {
 	          user-select: none;
 }*/
 
-.checkbox {
+/*.checkbox {
 	width: 50px;
 	height: 41px;
 	padding: 0 5px 0 0;
@@ -36,4 +36,4 @@ p.mcq-option-text {
 	display: block;
 	//clear: left;
 	float: left;
-}
+}*/
