--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -724,13 +724,31 @@ p.mcq-option-text {
 	      -ms-user-select: none;
 	          user-select: none;
 }*/
-.checkbox {
-  width: 50px;
-  height: 41px;
-  padding: 0 5px 0 0;
-  background: url(../../../images/csscheckbox.png) no-repeat;
-  display: block;
-  float: left;
+/*.checkbox {
+	width: 50px;
+	height: 41px;
+	padding: 0 5px 0 0;
+	background: url(../../../images/csscheckbox.png) no-repeat;
+	display: block;
+	//clear: left;
+	float: left;
+}*/input[type="text"].underline {
+  text-decoration: none;
+  background: url(../../../images/underline.gif) repeat-x 100% 100%;
+  padding-bottom: 4px;
+  white-space: nowrap;
+  text-align: center;
+}
+input[type="text"].border {
+  text-align: center;
+  border: 15px solid transparent;
+  -webkit-border-image: url(../../../images/border.gif) 20 20 stretch;
+  /* Safari 5 */
+
+  -o-border-image: url(../../../images/border.gif) 20 20 stretch;
+  /* Opera */
+
+  border-image: url(../../../images/border.gif) 20 20 stretch;
 }
 .listBox {
   margin-top: 60px;
