custom checkbox styles

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -579,7 +579,7 @@
 
 /*MCQ*/
 .mcq-option {
-	width: 145px;
+	width: 172px;
 	margin-right: 10px;
 	float: left;
 	word-wrap: break-word;
@@ -594,6 +594,7 @@
 		position: relative;
 		z-index: 2;
 		margin: 4px 5px 0;
+		background-size: 32px;
 	}
 	p{
 		margin: 0;
