--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -663,7 +663,7 @@
 }
 /*MCQ*/
 .mcq-option {
-  width: 145px;
+  width: 172px;
   margin-right: 10px;
   float: left;
   word-wrap: break-word;
@@ -679,6 +679,7 @@
   position: relative;
   z-index: 2;
   margin: 4px 5px 0;
+  background-size: 32px;
 }
 .mcq-option p {
   margin: 0;
