4 google fonts added

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -1,6 +1,7 @@
 @import "icomoon.css";
 @import "variables.less";
 @import "mixins.less";
+@import "fonts.less";
 @import "builder.less";
 @import "checkbox.less";
 @import "fib.less";
