--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-display/templates/content-display.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-display/templates/content-display.html
@@ -7,7 +7,7 @@
 	<div class="cbp_tmlabel">
 		<div class="p-t-15 p-l-30 p-r-15 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5">
 			<div class="tools"> <a href="#content-piece-config" data-toggle="modal" class="config"></a> <a href="javascript:;" class="remove"></a> </div>
-		  <h4 class="m-t-5 m-b-5"><span class="text-success semi-bold"><a href="#">{{post_title}}</a></span> </h4>
+		  <h4 class="m-t-5 m-b-5"><span class="text-success semi-bold">{{post_title}}</span> </h4>
 		</div>
 		<div class="clearfix"></div>
 		<div class="tiles grey p-t-10 p-b-10 p-l-20">
