--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/textview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/textview.html
@@ -111,6 +111,9 @@
         </div>
         
       </div>
+      <div class="slide-primary">
+  <input type="checkbox" checked="checked" class="ios" name="switch" style="display: none;">
+</div>
         
       </div>
       
