--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -204,13 +204,23 @@
 
 .textFormat{
 	display: inline-block;
-	.btn, .btn:focus{
-		background-color: #d1dade;
+	margin-left: 5px;
+	.checkbox label{
+		margin-right: 0;
+		padding-left: 10px;
+		padding-right: 10px;
+		margin-bottom: 0;
+		&:before, &:after{
+			display: none;
+		}
 	}
-	.btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled]{
+	input[type=checkbox]:checked ~ label {
 		background-color: @color-primary;
 		color: @color-white;
+		-webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
+				box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
 	}
+	
 
 }
 
