--- a/HTML/assets/less/fib.less
+++ b/HTML/assets/less/fib.less
@@ -1,4 +1,4 @@
-input[type="text"].underline{
+textarea.underline{
 	text-decoration: none; 
 	background: url(../../../images/underline.gif) repeat-x 100% 100%;
 	padding-bottom: 4px;
@@ -6,7 +6,7 @@ input[type="text"].underline{
 	text-align: center;
 }
 
-input[type="text"].border{
+textarea.border{
 	text-align: center;
 	border:15px solid transparent;
 	-webkit-border-image:url(../../../images/border.gif) 20 20 stretch; /* Safari 5 */
