--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -259,18 +259,23 @@
 }
 .textFormat {
   display: inline-block;
+  margin-left: 5px;
 }
-.textFormat .btn,
-.textFormat .btn:focus {
-  background-color: #d1dade;
+.textFormat .checkbox label {
+  margin-right: 0;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 0;
 }
-.textFormat .btn:hover,
-.textFormat .btn:active,
-.textFormat .btn.active,
-.textFormat .btn.disabled,
-.textFormat .btn[disabled] {
+.textFormat .checkbox label:before,
+.textFormat .checkbox label:after {
+  display: none;
+}
+.textFormat input[type=checkbox]:checked ~ label {
   background-color: #0aa699;
   color: #ffffff;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 .minicolors-theme-default.minicolors {
   width: 60px;
@@ -772,14 +777,14 @@ p.mcq-option-text {
 	display: block;
 	//clear: left;
 	float: left;
-}*/input[type="text"].underline {
+}*/textarea.underline {
   text-decoration: none;
   background: url(../../../images/underline.gif) repeat-x 100% 100%;
   padding-bottom: 4px;
   white-space: nowrap;
   text-align: center;
 }
-input[type="text"].border {
+textarea.border {
   text-align: center;
   border: 15px solid transparent;
   -webkit-border-image: url(../../../images/border.gif) 20 20 stretch;
