hotspot checkbox fix

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/textview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/textview.html
@@ -114,10 +114,14 @@
 
       <div class="textFormat">
         <div id="font-style" class="checkbox">
-          <input id="bold-checkbox" type="checkbox" value="1">
-          <label for="bold-checkbox" class="btn"><i class="fa fa-bold"></i></label>
-          <input id="italic-checkbox" type="checkbox" value="2">
-          <label for="italic-checkbox" class="btn"><i class="fa fa-italic"></i></label>
+          <span>
+            <input id="bold-checkbox" type="checkbox" value="1">
+            <label for="bold-checkbox" class="btn"><i class="fa fa-bold"></i></label>
+          </span>
+          <span>
+            <input id="italic-checkbox" type="checkbox" value="2">
+            <label for="italic-checkbox" class="btn"><i class="fa fa-italic"></i></label>
+          </span>
         </div>
       </div>
 <!--       <div class="slide-primary">
