Left menu sub levels made start training textbook modules page

--- a/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
@@ -1,18 +1,10 @@
 
   <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 697.5px;"><div id="main-menu-wrapper" class="page-sidebar-wrapper" style="overflow: hidden; width: auto; height: 697.5px;">
 
-<ul>	
+<ul class="menu-items">	
 
 	<!-- BEGIN ONE LEVEL MENU -->
-	<li class="start active open">
-		<a href="javascript://;">
-			<i class="fa fa-book"></i>
-			<span class="title">Content Management</span>
-			<span class="arrow open"></span>
-		</a>
-		<ul class="sub-menu">
-		</ul>
-	</li>
+	
 	<!-- END ONE LEVEL MENU -->
 
 </ul>
