hotspot option transparency fix

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/optionview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/optionview.html
@@ -22,8 +22,8 @@
 			</div>
 
 			<div id="transparency" class="checkbox check-success">
-				<input id="checkbox3" type="checkbox" value="1">
-				<label for="checkbox3">Set Transparent</label>
+				<input id="transparency-checkbox" type="checkbox" value="1">
+				<label for="transparency-checkbox">Set Transparent</label>
 			</div>
 
 			<div id="knob" class="form-group">
