--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -151,30 +151,35 @@
 		li{
 			float: left;
 			border: 2px solid #e5e9ec;
-			//background:#e5e9ec;
-			width: 65px;
-			height: 65px;
+			background:@color-white;
+			width: 92px;
+			height: 56px;
 			margin: 4px;
 			list-style-type: none;
 			cursor: move;
 			text-align: center;
 			padding: 0;
-			padding-top: 3%;
+			padding-top: 5%;
+			//.ease;
 			a{
 				cursor: move;
-				&:hover{
-					color: @color-green;
-				}
 			}
 			i{
-				font-size: 42px;
+				font-size: 35px;
+			}
+			&:hover{
+				background-color: @color-primary;
+				.ease;
+				a{
+					color: @color-white;
+				}
 			}
 		}
 	}
 }
 
 .docket-body{
-	background: @color-white;
+	background: @preview-grey;
 	padding: 15px 10px;
 	color: #000;
 	label{
@@ -214,11 +219,10 @@
 			display: none;
 		}
 	}
-	input[type=checkbox]:checked ~ label {
+	input[type=checkbox]:checked + label {
 		background-color: @color-primary;
 		color: @color-white;
-		-webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
-				box-shadow: inset 0 3px 5px rgba(0,0,0,0.125);
+		.box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
 	}
 	
 
@@ -234,9 +238,12 @@
 	border-radius: 5px;
 }
 
-.rotateCtrl > div{
-	position: relative;
-	top: 15px;
+.rotateCtrl {
+	display: inline-block;
+	& > div{
+		position: relative;
+		top: 15px;
+	}
 }
 
 .element-wrapper {
