--- a/HTML/assets/less/fib.less
+++ b/HTML/assets/less/fib.less
@@ -1,15 +1,19 @@
-textarea.underline{
-	text-decoration: none; 
-	background: url(../../../images/underline.gif) repeat-x 100% 100%;
-	padding-bottom: 4px;
-	white-space: nowrap;
-	text-align: center;
+input[type="text"], textarea{
+	&.underline{
+		text-decoration: none; 
+		background: url(../../../images/underline.gif) repeat-x 100% 100%;
+		padding-bottom: 4px;
+		white-space: nowrap;
+		text-align: center;
+	}
 }
 
-textarea.border{
-	text-align: center;
-	border:15px solid transparent;
-	-webkit-border-image:url(../../../images/border.gif) 20 20 stretch; /* Safari 5 */
-	     -o-border-image:url(../../../images/border.gif) 20 20 stretch; /* Opera */
-			border-image:url(../../../images/border.gif) 20 20 stretch;
+input[type="text"], textarea{
+	&.border{
+		text-align: center;
+		border:15px solid transparent;
+		-webkit-border-image:url(../../../images/border.gif) 20 20 stretch; /* Safari 5 */
+		     -o-border-image:url(../../../images/border.gif) 20 20 stretch; /* Opera */
+				border-image:url(../../../images/border.gif) 20 20 stretch;
+	}
 }
