--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -215,26 +215,42 @@
 .docket ul li {
   float: left;
   border: 2px solid #e5e9ec;
-  width: 65px;
-  height: 65px;
+  background: #ffffff;
+  width: 92px;
+  height: 56px;
   margin: 4px;
   list-style-type: none;
   cursor: move;
   text-align: center;
   padding: 0;
-  padding-top: 3%;
+  padding-top: 5%;
 }
 .docket ul li a {
   cursor: move;
 }
-.docket ul li a:hover {
-  color: #0aa699;
-}
 .docket ul li i {
-  font-size: 42px;
+  font-size: 35px;
+}
+.docket ul li:hover {
+  background-color: #0aa699;
+  -webkit-transition: all 0.3s ease-out;
+  /* Chrome 1-25, Safari 3.2+ */
+
+  -moz-transition: all 0.3s ease-out;
+  /* Firefox 4-15 */
+
+  -o-transition: all 0.3s ease-out;
+  /* Opera 10.50–12.00 */
+
+  transition: all 0.3s ease-out;
+  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
+}
+.docket ul li:hover a {
+  color: #ffffff;
 }
 .docket-body {
-  background: #ffffff;
+  background: #f3f3f3;
   padding: 15px 10px;
   color: #000;
 }
@@ -271,7 +287,7 @@
 .textFormat .checkbox label:after {
   display: none;
 }
-.textFormat input[type=checkbox]:checked ~ label {
+.textFormat input[type=checkbox]:checked + label {
   background-color: #0aa699;
   color: #ffffff;
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -284,6 +300,9 @@
 }
 .minicolors-swatch-color {
   border-radius: 5px;
+}
+.rotateCtrl {
+  display: inline-block;
 }
 .rotateCtrl > div {
   position: relative;
@@ -777,13 +796,15 @@ p.mcq-option-text {
 	display: block;
 	//clear: left;
 	float: left;
-}*/textarea.underline {
+}*/input[type="text"].underline,
+textarea.underline {
   text-decoration: none;
   background: url(../../../images/underline.gif) repeat-x 100% 100%;
   padding-bottom: 4px;
   white-space: nowrap;
   text-align: center;
 }
+input[type="text"].border,
 textarea.border {
   text-align: center;
   border: 15px solid transparent;
