fib properties markup/styles changes

--- a/HTML/assets/less/fib.less
+++ b/HTML/assets/less/fib.less
@@ -17,3 +17,17 @@ input[type="text"], textarea{
 				border-image:url(../../../images/border.gif) 20 20 stretch;
 	}
 }
+
+.style{
+	.select2-container{
+		width: 65%;
+	}
+}
+
+.colors{
+	.minicolors-theme-default.minicolors {
+		width: 30px;
+		height: 22px;
+		margin-right: 10px;
+	}
+}
