--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -816,6 +816,14 @@ textarea.border {
 
   border-image: url(../../../images/border.gif) 20 20 stretch;
 }
+.style .select2-container {
+  width: 65%;
+}
+.colors .minicolors-theme-default.minicolors {
+  width: 30px;
+  height: 22px;
+  margin-right: 10px;
+}
 .listBox {
   margin-top: 60px;
 }
