--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/left/templates/left.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/left/templates/left.html
@@ -2,7 +2,7 @@
 	<!-- BEGIN SLIM NAVIGATION TOGGLE -->
 	<ul class="nav quick-section">
 		<li class="quicklinks">
-			<a id="layout-condensed-toggle" class="" href="#">
+			<a id="layout-condensed-toggle" class="" style="cursor:pointer" >
 				<div class="iconset top-menu-toggle-dark"></div>
 			</a>
 		</li>
