mcq style changes

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -22,7 +22,7 @@
 				padding: 0;
 			}
 			.row {
-				margin: 0.5em;
+				//margin: 0.5em;
 				border: 1px solid transparent;
 			}
 		}
@@ -596,56 +596,6 @@
 	.bicon{
 		font-size: 50px;
 		color: @body-bg;
-	}
-}
-
-/*MCQ*/
-.mcq-option {
-	width: 100%;
-	//margin-right: 5px;
-	//float: left;
-	//word-wrap: break-word;
-	border: 2px dashed @preview-grey;
-	padding: 5px;
-	margin-bottom: 5px;
-	//position: relative;
-	min-height: 40px;
-	span{
-		//float: left;
-	}
-	.mcq-option-select{
-		float: left;
-		//position: absolute;
-		//top: 0px;
-		//left: 0;
-		z-index: 2;
-		margin: 4px 5px 0;
-		background-size: 32px;
-	}
-	p{
-		margin: 0;
-		//margin-left: 32px;
-		word-break: break-word;
-		//display: inline-block;
-		overflow: hidden;
-	}
-	p.placeholder{
-		color: darken(@body-bg, 2%);
-		font-size: 15px;
-		font-weight: bold;
-	}
-}
-
-#multiple-answer{
-	label{
-		margin-bottom: 10px;
-		margin-top: 5px;
-	}
-}
-
-#individual-marks-region{
-	input{
-		margin-bottom: 4px;
 	}
 }
 
