--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -5,6 +5,7 @@
 @import "builder.less";
 @import "checkbox.less";
 @import "fib.less";
+@import "mcq.less";
 @import "chapters.less";
 @import "class.less";
 @import "training.less";
