--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/mcq-property-box/templates/mcqpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/mcq-property-box/templates/mcqpropview.html
@@ -3,7 +3,7 @@
 		<div class="tile-footer drag">
 			MCQ <i class="fa fa-chevron-right"></i> <span class="semi-bold">Multiple Choice Question Properties</span>
 		</div>
-		<div class="docket-body">
+		<div class="docket-body mcqProp">
 
 			<div id="multiple-answer" class="radio radio-success">Multiple right answers allowed?
 				<input id="yes" type="radio" name="optionyes" value="yes">
@@ -12,7 +12,7 @@
 				<label for="no">No</label>
 			</div>
 
-			<div class="inline m-t-5">
+			<div class="m-t-5 m-b-10">
 				Options
 				<select id="options-num">
 					<option value="2">2</option>
@@ -25,7 +25,7 @@
 				</select>
 			</div>
 
-			<div class="inline">
+			<div class="m-b-10">
 				Columns
 				<select id="column-num">
 					<option value="1">1</option>
@@ -36,17 +36,14 @@
 				</select>
 			</div>
 
-			<div class="inline">
+			<div class="m-b-10">
 				Marks
-				<select id="marks">
-					<option value="1">1</option>
-					<option value="2">2</option>	
-				</select>
+				<input type="text" value="0" class="form-control">
 			</div>
 
 			<div class="m-t-15">
 				<div class="checkbox check-success">
-					<input id="check-ind-marks" type="checkbox" name="check-ind-marks"> <label>Marks for individual options</label>
+					<input id="check-ind-marks" type="checkbox" name="check-ind-marks"> <label for="check-ind-marks">Marks for individual options</label>
 				</div>
 			</div>
 
