mcq enable single selection, disable marks input ,

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/mcq-property-box/templates/mcqpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/mcq-property-box/templates/mcqpropview.html
@@ -38,7 +38,7 @@
 
 			<div class="m-b-10">
 				Marks
-				<input type="text" value="0" class="form-control">
+				<input id="marks" type="text" value="{{marks}}" class="form-control">
 			</div>
 
 			<div class="m-t-15">
